class11/mypod-prd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prodone
  labels:
    name: prodone
    managed-by: IT
    version: "2.4"
    component: frontend
    part-of: employee
    instance: jan2025
    client: abc
    env: prod
spec:
  containers:
  - name: prodone
    image: nginx
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: prodtwo
  labels:
    name: prodtwo
    managed-by: IT
    version: "2.4"
    component: frontend
    part-of: employee
    instance: jan2025
    client: abc
    env: prod
spec:
  containers:
  - image: nginx
    name: prodtwo
    ports:
    - containerPort: 80
