class11/mypod.yml
apiVersion: v1
kind: Pod
metadata:
  name: devone
  labels:
    name: devone
    managed-by: IT
    version: "2.4"
    component: frontend
    part-of: employee
    instance: jan2025
    client: abc
    env: prod
spec:
  containers:
  - image: nginx
    name: boxone
    ports:
    - containerPort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: devtwo
  labels:
    name: devtwo
    managed-by: IT
    version: "2.4"
    component: frontend
    part-of: employee
    instance: jan2025
    client: abc
    env: prod
spec:
  containers:
  - image: nginx
    name: boxtwo
    ports:
    - containerPort: 80
