class11/app-one-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
  annotations:
    kubernetes.io/change-cause: "version 2 deployed with bug fix oct 2025"
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx
  minReadySeconds: 10
  strategy:
      type: RollingUpdate
      rollingUpdate:
        maxUnavailable: 1
        maxSurge: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
  #    nodeSelector:
  #     cpu: i7
  #      cpu: xeon
      affinity:
        podAntiAffinity:
        #nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                #operator: NotIn
                values:
                - nginx
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        #resources:
        #  limits:
        #    cpu: 200m
        #    memory: 400Mi
        #  requests:
        #    cpu: 80m
        #    memory: 100Mi
        startupProbe:
          exec:
            command:
            - cat
            - /usr/share/nginx/html/index.html
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 3 
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          exec:
            command:
            - cat
            - /usr/share/nginx/html/index.html
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 2
          successThreshold: 1
        livenessProbe:
          exec:
            command:
            - cat
            - /usr/share/nginx/html/index.html
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 2
          failureThreshold: 4
          successThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-deployment-svc
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
