class11/prod-network-policyOnetoOne.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: prod-network-policy
  namespace: prod
spec:
  podSelector:
    matchLabels:
      name: prodone
  policyTypes:
  - Ingress
 # - Egress
  ingress:
  - from:
   # - ipBlock:  
   #     cidr: 172.17.0.0/16
   #     except:
   #     - 172.17.1.0/24
    - namespaceSelector:
        matchLabels:
          area: dev
      podSelector:
        matchLabels:
          name: devone
    ports:
    - protocol: TCP
      port: 80
#  egress:
#  - to:
#    - ipBlock:
#        cidr: 10.0.0.0/24
#    ports:
#    - protocol: TCP
#      port: 5978
